# yahtzeeRL

./: .gitignore  AUDIT.md  EVAL_RESULTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
logs/: play_transcript_001.txt  play_transcript_002.txt
notebooks/: colab_self_play.ipynb
plots/: make_plots.py  winrate_vs_step.csv
scripts/: eval_checkpoint_curve.py
tests/: test_actions.py  test_env.py  test_evaluate.py  test_mcts_stochastic.py  test_play_cli.py  test_rewards.py  test_scoring.py  test_train.py
yahtzee_rl/: __init__.py  actions.py  constants.py  dice_tables.py  env.py  evaluate.py  mcts.py  model.py  play_cli.py  rewards.py  scoring.py  self_play.py  train.py
